--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -4,11 +4,7 @@
 # documentation.
 name: Build & Release
 
-on:
-  push:
-    tags:
-      - '*'
-      - '!*-rc*'
+on: workflow_dispatch
 
 permissions:
   contents: write
@@ -58,16 +54,6 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
           files: 'out/inochi-session-linux-x86_64.zip'
-        
-    - name: 'Publish to Itch'
-      uses: manleydev/butler-publish-itchio-action@master
-      env:
-        BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
-        CHANNEL: linux
-        ITCH_GAME: inochi-session
-        ITCH_USER: LunaFoxgirlVT
-        VERSION_FILE: version.txt
-        PACKAGE: 'out/inochi-session-linux-x86_64.zip'
 
   windows-build:
     runs-on: windows-latest
@@ -125,26 +111,6 @@ jobs:
           out/inochi-session-win32-x86_64.zip
           version.txt
         retention-days: 1
-
-  windows-itch:
-    name: Itch Release (Windows)
-    runs-on: ubuntu-latest
-    needs: windows-build
-    steps:
-    - name: Download ZIP from artifacts
-      uses: actions/download-artifact@v3
-      with:
-        name: release-win32
-
-    - name: 'Publish to Itch'
-      uses: manleydev/butler-publish-itchio-action@master
-      env:
-        BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
-        CHANNEL: windows
-        ITCH_GAME: inochi-session
-        ITCH_USER: LunaFoxgirlVT
-        VERSION_FILE: version.txt
-        PACKAGE: 'out/inochi-session-win32-x86_64.zip'
 
   macOS-build:
     runs-on: macos-12
@@ -237,33 +203,3 @@ jobs:
           out/inochi-session-macOS.zip
           version.txt
         retention-days: 1
-
-    - name: 'Build DMG'
-      run: |
-        ./build-aux/osx/gendmg.sh
-
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-          files: out/Install_Inochi_Session.dmg
-
-  macOS-itch:
-    name: Itch Release (macOS)
-    runs-on: ubuntu-latest
-    needs: macOS-build
-    steps:
-    - name: Download ZIP from artifacts
-      uses: actions/download-artifact@v3
-      with:
-        name: release-osx
-
-    - name: 'Publish to Itch'
-      uses: manleydev/butler-publish-itchio-action@master
-      env:
-        BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
-        CHANNEL: osx
-        ITCH_GAME: inochi-session
-        ITCH_USER: LunaFoxgirlVT
-        VERSION_FILE: version.txt
-        PACKAGE: 'out/inochi-session-macOS.zip'
